--- a/tc-rannstein-app/src/i18n/translation-de.json
+++ b/tc-rannstein-app/src/i18n/translation-de.json
@@ -59,7 +59,7 @@
     },
     "navbar": {
       "police": {
-        "key": "POLIZEI RESOURCEN",
+        "key": "POLIZEI RESSOURCEN",
         "l1": "Nächste Polizeiwache",
         "l2": "Anzeige erstatten & Weiteres"
       },
