Added Header for Seek Help

--- a/tc-rannstein-app/src/i18n/translation-de.json
+++ b/tc-rannstein-app/src/i18n/translation-de.json
@@ -32,6 +32,7 @@
     },
     "communityexp": "Es ist nicht immer einfach, Hilfe in Anspruch zu nehmen, aber es gibt Selbsthilfegruppen und Organisationen, die für Sie da sind!",
     "infopageexp":"Chatten sie mit Lilo, unserer KI-Expertin für Recht, oder sehen Sie sich unsere anderen Ressourcen an",
+    "seekhelppageexp": "Chatten sie mit Lilo, unserer KI-Expertin für Recht, oder erhalten sie maßgeschneiderte Hilfe für ausgewählte Verbrechen",
     "resourcesbar": {
       "police": "Anzeige erstatten & Weiteres",
       "law": "Örtliches Recht",
