--- a/tc-rannstein-app/src/i18n/translation-en.json
+++ b/tc-rannstein-app/src/i18n/translation-en.json
@@ -32,6 +32,7 @@
     },
     "communityexp": "It's not always easy to seek out police and legal help, there are always other supportgroups and organisations that are here for you!",
     "infopageexp":"Chat with Lilo, our A.I. Law Expert or view our other Resources",
+    "seekhelppageexp": "Chat with Lilo, our A.I. Law Expert or get tailored help for specific crimes",
     "resourcesbar": {
       "police": "Reporting Crime & What To Do",
       "law": "Local Law",
